--- a/MemeThing/Views/MemeThing/Views/Base.lproj/MainMenu.storyboard
+++ b/MemeThing/Views/MemeThing/Views/Base.lproj/MainMenu.storyboard
@@ -332,7 +332,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cY-5M-71c">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cY-5M-71c" customClass="CanvasView" customModule="MemeThing" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28.5" width="373" height="627.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="hdu-03-sxy">
@@ -347,18 +347,11 @@
                                                     <action selector="undoButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LM4-Vl-Ww8"/>
                                                 </connections>
                                             </button>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jwu-Ri-QEe">
-                                                <rect key="frame" x="0.0" y="0.0" width="373" height="627.5"/>
-                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="hdu-03-sxy" secondAttribute="trailing" constant="8" id="KEm-R5-sGf"/>
                                             <constraint firstItem="hdu-03-sxy" firstAttribute="top" secondItem="7cY-5M-71c" secondAttribute="top" constant="8" id="M1I-by-Gyk"/>
-                                            <constraint firstItem="Jwu-Ri-QEe" firstAttribute="top" secondItem="7cY-5M-71c" secondAttribute="top" id="aJD-GE-AA8"/>
-                                            <constraint firstAttribute="bottom" secondItem="Jwu-Ri-QEe" secondAttribute="bottom" id="hiI-HK-CAH"/>
-                                            <constraint firstAttribute="trailing" secondItem="Jwu-Ri-QEe" secondAttribute="trailing" id="vgK-88-M1x"/>
-                                            <constraint firstItem="Jwu-Ri-QEe" firstAttribute="leading" secondItem="7cY-5M-71c" secondAttribute="leading" id="xBY-TK-djq"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zL-R8-fD7">
@@ -383,8 +376,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="canvasView" destination="7cY-5M-71c" id="Qh0-j3-Dzc"/>
-                        <outlet property="drawingImageView" destination="Jwu-Ri-QEe" id="1Rt-yT-BrO"/>
+                        <outlet property="canvasView" destination="7cY-5M-71c" id="LgD-Zk-BYf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
